force-app/main/default/objects/Account/fields/Checking_ci_job__c.field-meta.xml
<CustomField>
    <fullName>Checking_ci_job__c</fullName>
    <label>Checking ci job</label>
    <length>50</length>
    <type>Text</type>
</CustomField>