force-app/main/default/objects/Account/fields/checking_for_sh__c.field-meta.xml
<CustomField>
    <fullName>checking_for_sh__c</fullName>
    <label>checking for sh</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Checking_for_Sh</valueSetName>
    </valueSet>
</CustomField>