force-app/main/default/objects/Account/fields/CI_Job_check__c.field-meta.xml
<CustomField>
    <fullName>CI_Job_check__c</fullName>
    <label>CI Job check</label>
    <length>50</length>
    <type>Text</type>
</CustomField>