force-app/main/default/objects/Account/fields/HT_Check__c.field-meta.xml
<CustomField>
    <fullName>HT_Check__c</fullName>
    <label>HT Check</label>
    <length>50</length>
    <type>Text</type>
</CustomField>