force-app/main/default/objects/Account/fields/Production_org_to_hotfix__c.field-meta.xml
<CustomField>
    <fullName>Production_org_to_hotfix__c</fullName>
    <label>Production org to hotfix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>